Enhance ResourceDialog: add create and delete functionality, update UI for new resource management, and improve data handling

--- a/resource-ui/src/app/component/resource.component.html
+++ b/resource-ui/src/app/component/resource.component.html
@@ -4,6 +4,7 @@
   width="100%"
   [center]="center"
   [zoom]="zoom"
+  (mapDblclick)="onMapDblClick($event)"
 >
   <map-marker
     *ngFor="let marker of markers"
